Include useful example